# auto-judge-code

./: .gitignore  LICENSE  README.md  api_key_example.sh  pyproject.toml  setup.cfg
.github/workflows/: integration-tests.yml  tests-without-dspy.yml  tests.yml
documentation/: README.md
documentation/leaderboard-upload-skeleton/: ir-metadata.yml
integration-tests/: test_approaches_without_dependencies.py
legacy-config/: requirements.txt  setup.cfg
legacy-config/prefjudge/: requirements.txt
tests/: __init__.py  test_auto_judge_protocol.py  test_autojudge_verification.py  test_cli_workflow_flags.py  test_click_interface.py  test_evaluation.py  test_evaluation_interface.py  test_export_corpus.py  test_ir_datasets_integration.py  test_llm_integration.py  test_minima_llm_multirun.py  test_minima_llm_resilience.py  test_model_resolver.py  test_nugget_data_builder.py  test_rag_topics.py  test_rag_topics_error_messages.py  test_rubric.py  test_simplistic_access_to_runs.py  test_workflow.py
tests/approval/: TestLeaderboard.test_valid_leaderboard_float.approved.  TestLeaderboard.test_valid_leaderboard_mean_bools_all_true.approved.  test_leaderboard.py
trec25/: README.md
trec25/datasets/: README.md
trec25/datasets/dragun-anon/: .gitignore
trec25/datasets/rag-auggen-anon/: README.md
trec25/datasets/rag-gen-anon/: README.md
trec25/datasets/spot-check-dataset/: README.md  queries.jsonl  trec-leaberboard.txt
trec25/judges/axiomatic/: Dockerfile  README.md  axiomatic-judge.py  requirements.txt
trec25/judges/naive/: Dockerfile  README.md  foo  naive-baseline.py  requirements.txt  workflow.yml
trec25/judges/pyterrier-retrieval/: Dockerfile  README.md  requirements.txt  retrieval-judge.py  workflow.yml
trec25/judges/rubric/: Dockerfile  __init__.py  llm-config.yml  rubric_autojudge.py  workflow.yml
trec25/judges/umbrela/: .gitignore  Dockerfile  README.md  umbrela-baseline.py  umbrela_baseline.py  workflow.yml
trec25/judges/umbrella/: README.md  umbrela-baseline.py
trec25/spot-check-dataset/: README.md
trec25/spot-check-dataset/runs/: my_best_run_02_with_citations
trec26/: README.md
trec_auto_judge/: __init__.py  cli_default_group.py  click.py  click_plus.py  evaluation.py  io.py  judge_runner.py  leaderboard.py  qrels.py  report.py  request.py  utils.py
trec_auto_judge/_commands/: _evaluate.py  _export_corpus.py  _list_models.py
trec_auto_judge/leaderboard/: README.md  __init__.py  leaderboard.py  verification.py
trec_auto_judge/llm/: README.md  __init__.py  example.py  example_dspy.py  llm_config.py  llm_protocol.py  minima_llm.py  minima_llm_dspy.py  minimal_llm.py  minimallm_dspy.py
trec_auto_judge/llm_resolver/: ORGANIZER.md  README.md  __init__.py  available_models.example.yml  model_resolver.py
trec_auto_judge/nugget_data/: README.mkd  __init__.py  io.py  nugget_banks.py  nugget_data.py  nugget_data_example.py  protocols.py  verification.py
trec_auto_judge/nugget_data/nuggetizer/: __init__.py  (+2 more)
trec_auto_judge/qrels/: README.md  __init__.py  qrels.py  verification.py
trec_auto_judge/workflow/: README.md  __init__.py  paths.py  settings.py  workflow.py
