[metadata]
name = trec_auto_judge
version = attr: trec_auto_judge.__version__
description = The trec_auto_judge package aims to provide a set of shared code for the evaluation and data wrangling for the TREC Auto Judge shared tasks.
license_file = LICENSE
url = tbd
project_urls =
    Bug Tracker = tbd
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.10
include_package_data = True
packages = find:
install_requires =
    click
    pandas
    numpy
    scipy
    tira>=0.0.192
    pydantic>=2.0

[options.extras_require]
test =
    pytest>=8.0,==8.*
    pytest-asyncio>=0.23
    pytest-cov>=5.0,==5.*
    approvaltests
    parameterized
    coverage-badge

[options.entry_points]
console_scripts =
    trec-auto-judge = trec_auto_judge:main

[flake8]
max-line-length = 120
extend-ignore = E203
max-complexity = 10
